# mdes-peer-program-atlas

./: .env.example  .gitignore  README.md
peer-atlas-cli/: README.md  pyproject.toml
peer-atlas-cli/docs/: tavily-query-composition.md
peer-atlas-cli/peer_atlas_cli/: __init__.py  categories.py  cli_progress.py  config.py  corpus_io.py  curriculum_units.py  fetch_limits.py  html_text.py  identity_fallback.py  json_paths.py  llm_client.py  llm_nodes.py  llm_reporting.py  llm_transcript.py  main.py  program_dates.py  program_merge.py  program_sanitize.py  program_skeleton.py  prompt_loader.py  publish_coerce.py  reconsider_evidence.py  repo_root.py  research.py  research_playwright.py  schema_validation.py  slug.py  sources_from_url_cache.py
peer-atlas-cli/prompts/: add_program.md  reevaluate_categories.md  refine_program.md  refresh_program.md  search_context_from_seed.md
peer-atlas-cli/tests/: __init__.py  conftest.py  corpus_fixtures.py  test_atlas_ingest_stages.py  test_category_enum_repair.py  test_cip_codes.py  test_classify_cip.py  test_clear_programs.py  test_curriculum_extract_debug.py  test_curriculum_units.py  test_draft_skeleton.py  test_evidence_bundle.py  test_evidence_relevance.py  test_fetch_limits.py  test_freopp_matching.py  test_host_scope.py  test_html_text.py  test_identity_fallback.py  test_json_paths.py  test_llm_evidence_markdown.py  test_llm_nodes_context.py  test_llm_providers.py  test_llm_transcript.py  test_merge_patch.py  test_node_prompt_rules.py  test_playwright_post_load.py  test_program_dates.py  test_program_sanitize.py  (+9 more)
(+80 files in other folders)
